--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
+body {
+    background: #494b4f;
+    font-family: 'PT Sans Narrow', sans-serif;
+    margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.square {
+    width: 30%;
+    margin: 1.66%;
+    padding-bottom: 30%;
+    background: purple;
+    float: left;
+    border-radius: 50%;
+    transition: background 0.6s;
+    -webkit-transition: background 0.6s;
+    -moz-transition: background 0.6s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#container {
+    max-width: 600px;
+    margin: 20px auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#colorDisplay {
+    font-size: 200%;
+    font-weight: 700;
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+    font-weight: normal;
+    text-transform: uppercase;
+    color: white;
+    text-align: center;
+    background: steelblue;
+    margin: 0;
+    padding: 20px 0;
+    line-height: 1.1;
+    letter-spacing: 2px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+    border: none;
+    background: none;
+    outline: none;
+    text-transform: uppercase;
+    height: 100%;
+    font-weight: 700;
+    color: steelblue;
+    letter-spacing: 1px;
+    font-size: inherit;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+}
+
+button:hover {
+    color: white;
+    background: steelblue;
+}
+
+#message {
+    display: inline-block;
+    width: 20%;
+}
+
+#curtain {
+    height: 25px;
+    background: white;
+    text-align: center;
+    color: black;
+}
+
+.selected {
+    background: steelblue;
+    color: white;
 }
